MDEV-19124 Assertion `0' failed in Item::val_native